# CPPFun

./: CMakeLists.txt  README.md  mergeSort.cpp
Algorithm/: README.md  algorithm.md  binarySearch.cpp  bubbleSort.cpp  quickSort.cpp  selectionSort.cpp
Allocator/: README.md  defaultAllocator.cpp
Asio/: README.md  asyncTcpDaytimeServer.cpp  asyncTcpUdpServer.cpp  asyncUdpDaytimeServer.cpp  boostasio.cpp  chat_client.cpp  chat_server.cpp  syncTcpDaytimeClient.cpp  syncUdpDaytimeClient.cpp
Atomics/: README.md
BitField/: README.md  bitField.cpp
CMakeScriptLearning/: READMD.md  cmakescript.txt
CompilerOptimization/: README.md  copyElision.cpp
Constructor/: catchExceptFromConstructorInitializer.cpp
CopyControl/: README.md  copyInitialization.cpp  moveObjectOutOfFunctionBody.cpp
CustomizedContainer/: guidelinesForDesigningDataStructuresForConcurrency.md  queueUsingSingleLinkedList.hpp  queueUsingSingleLinkedList.md  queueUsingSingleLinkedListExample.cpp
DataRaces/: README.md
Declaration/: READMD.md
Destructor/: throwExceptInDestructor.cpp
Emplace/: README.md
ExceptionHandling/: README.md
Future/: README.md  future.cpp  writerReader.cpp
HerbSutter/BackToBasics/: README.md  rangeFor.cpp
HerbSutter/LeakFreedom/: README.md
Json/: README.md  config.json  jsonExample.cpp
LambdaFunction/: README.md  example.cpp  generalizedLambdaCapture.cpp
LiveLock/: README.md  liveLock.cpp
Locks/: uniqueLock.cpp
MainFunctionArgument/: mainFuncArgument.cpp
MemoryManagement/: README.md  heapProblems.cpp
MemoryModel/: README.md  memoryOrdering.cpp
NamespacePollution/: READMEme  pollutedNamespace.cpp  snip1.h  snip2.h  snip3.h  snip4.h
NumaNode/: README.md
Object/: README.md  alignment.cpp  alignmentExample.cpp  structMemeberAlign.cpp
OnlineCourses/PluralSight/: resources.md
OnlineCourses/PluralSight/UnitTest/: README.md  catchExample.cpp
OperatorNewDelete/: README.md  operatorNewOverload.cpp
PerfectForwarding/: README.md  perfectForwarding.cpp
Pimp/: widget.cpp  widget.h
PlacementNew/: README.md  placementNew.cpp
PointerToFunction/: README.md  functionOverload.cpp
Preprocessor/: README.md  log.cpp  replaceTextMacros.cpp
ProcessAssociatedFileLock/: fact.md  flock.cpp
ReferenceCollapsing/: README.md
RightValueReference/: README.md  rlvalue.cpp
SharedVariable/: conditionVariable.cpp  deadLock.cpp
SmartPointer/: README.md  cycliSharedPtr.cpp  shared_ptr.cpp  unique_ptr.cpp  weak_ptr.cpp
SpecialMemeberFunctionGeneration/: README.md
StdMoveForward/: README.md
StdVectorImplementation/: stdVector.cpp
StorageDurationAndLinkage/: README.md  threadLocal.cpp
StorageDurationAndLinkage/linkageProject/: file1.cpp  file1.hpp  file2.cpp  file2.hpp  mainFunc.cpp
String/: cstrcpy.cpp
TemplateSpecialization/: README.md  functionTempSpec.cpp  functionTemplateSpecialization.cpp
TemplateTypeDeduction/: templateTypeDeduction.md
Thread/: README.md  accelerateDecelerate.cpp  cores_report.py  joinableThread.cpp
ThreadOrTaskBasedConcurrency/: README.md  stdAsync.cpp
TypeTrait/: README.md  staticAssert.cpp  type.cpp
Union/: README.md  union.cpp
UnitTestFramework/: README.md  catchExample.cpp
UniversalReference/: README.md  problemsToOverloadOnUniversalReferenceFunction.cpp  universalReference.cpp
ValuessAndReferenceness/: README.md
VariadicTemplate/: README.md  varidicTemplateFunction.cpp
VirtualFunction/: multipleVirtualFunc.cpp
Visibility/: README.md  dso.cpp  dso.h  loadDso.cpp
constexpr/: constexprFunc.cpp  facts.md
